--- a/templates/components/blog.html.twig
+++ b/templates/components/blog.html.twig
@@ -1,6 +1,6 @@
 {% import "_message.html.twig" as message %}
 
-<div class="card mx-auto shadow-lg" {{ attributes.defaults(stimulus_controller('chat')) }}>
+<div class="card mx-auto shadow-lg" {{ attributes.defaults(stimulus_controller('blog')) }}>
     <div class="card-header p-2">
             {{ ux_icon('mdi:symfony', { height: '32px', width: '32px' }) }}
             <strong class="ms-1 pt-1 d-inline-block">Symfony Blog Bot</strong>
